# best-first-search

./: .isort.cfg  .pylintrc  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: push.yml  tag.yml
best_first_search/: __init__.py  search.py
best_first_search/example/: __init__.py  a_star.py
src/best_first_search/: heap.py  search.py
src/best_first_search/example/: a_star.py
tests/: dynamic.sh  static.sh  test_a_star.py  test_search.py
