[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]

[project]
name = "best-first-search"
description = "My package description"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["best-first-search", "graph-traversal"]
license = {file = "LICENSE"}
authors = [
  {email = "thestudentofkyoto@gmail.com"},
  {name = "Han Jaeseung"}
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools_scm]

[project.optional-dependencies]
example = ["networkx>=2.8"]
ci = ["pylint==2.15.0", "mypy==0.971", "setuptools-scm", "pytest < 7.0.0"]
